# Axiom

./: .gitignore  1axiom  CLAUDE.md  README.md  pyproject.toml  readme.md  requirements.txt
axiom_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axiom_logs/: token_usage.jsonl
axiom_logs/details/: sha256_10bad87b69f446db.json  sha256_70d54db5f87ce094.json  sha256_7f17f39d063aa7e1.json  sha256_8bc8dfdfae4e9e6d.json  sha256_9a95de501ef735eb.json  sha256_b6e95da7e2201f2b.json  sha256_c65ea86fae577c4d.json  sha256_cdf90abcd227d3ff.json  sha256_e22956fed42ad6fc.json  sha256_e631f0c5588b5ed7.json  sha256_f1000e1a34397c5a.json  sha256_fd3595444b42d13a.json
axiom_logs/sessions/: 05c32e69.json  05c32e69_patched.py  1dc0f0b7.json  1dc0f0b7_patched.py  27502ee7.json  27502ee7_patched.py  4b9b5f16.json  4bd35b06.json  4bd35b06_patched.py  78f21745.json  78f21745_patched.py  81de3cc8.json  81de3cc8_patched.py  92401d5c.json  9b17417a.json  b23ec3bf.json  c813d038.json  c813d038_patched.py  cfb1d583.json
experiment/: main.py  output.
experiment/.cache/: latest_summary.json
experiment/data/: category_config.csv  inventory.csv
experiment/modules/: csv_reader.py  deduplicator.py  http_reporter.py  json_cache.py
experiment_libs/: dataframe_experiment.py  json_experiment.py  mixed_experiment.py
multiple_experiment/: requirements.txt
multiple_experiment/api/: main.py
multiple_experiment/config/: settings.py
multiple_experiment/models/: data_models.py
multiple_experiment/services/: http_service.py
smart_loader/: cli.py
(+18 files in other folders)
