[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-loader"
version = "2.0.0"
description = "AXIOM — Adaptive eXecution & Import Optimization Module. Multi-agent OS-Loader simulation using LangGraph + Ollama/Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "langgraph", "loader", "import-optimization", "binary-analysis"]

dependencies = [
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=0.2.0",
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
axiom = "smart_loader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_loader*"]